updated docs slightly

--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can probably get the representation at any particular layer using a `pytorch` callback, but for now lets just instantiate another gpt2 model without the \"LMHead\" and see what kind of vectors that gives us."
+    "We can probably get the representation at any particular layer using a `pytorch` callback, but for now lets just instantiate another gpt2 model without the \"LMHead\" and see what kind of vectors that gives us. *actually seems like we can get intermediate reps right from the `forward` method*"
    ]
   },
   {
@@ -179,8 +179,8 @@
    "source": [
     "Not really sure what's being returned. From https://huggingface.co/transformers/pretrained_models.html, it seems the hidden state size for the sentence (i.e. it's embedding) is 1600, and there are 48 layers for this model. So I guess the tuple is \n",
     "\n",
-    "element 0: hidden state\n",
-    "element 1: hidden states at each prior attention block.\n",
+    "- element 0: hidden state\n",
+    "- element 1: hidden states at each prior attention block.\n",
     "\n",
     "Looking at the vectors in element 1, it seems the 3rd dimension runs over the \"heads\" as there are 25 for this model. Below just check to make sure the same is true for the smaller gpt2 model. It seems to match, 12 heads, final hidden state is 768."
    ]
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare some cosine"
+    "### Compare some cosines between sentences"
    ]
   },
   {
