--- a/gpt2_small.ipynb
+++ b/gpt2_small.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,9 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from transformers import (GPT2Model,GPT2LMHeadModel, \n",
-    "                          GPT2Config, GPT2Tokenizer)"
+    "                          GPT2Config, GPT2Tokenizer,\n",
+    "                         BertConfig, BertTokenizer,\n",
+    "                         BertModel)"
    ]
   },
   {
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Can you guess what I am going to say after I finish writing this column? I\\'ll tell you the story about my new book \"The Last Life'"
+       "\"Can you guess what I am going to say? That's pretty bad.\\n\\nWhat's the best word for this kind of thing?\\n\\n\""
       ]
      },
-     "execution_count": 185,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -174,7 +176,7 @@
        "torch.Size([1, 9, 50257])"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -198,7 +200,7 @@
        "'Can you guess what I am going to say?'"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -316,7 +318,7 @@
        "tensor(0.9998, device='cuda:0')"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,6 +338,61 @@
     "\n",
     "\n",
     "Or, perhaps the way to construct the sentence vector is not the one implemented here, and the correct one actually results in a larger angle and this example is completely inaccurate!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Stanford real-life contradictions dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xml.etree.ElementTree as ET\n",
+    "tree = ET.parse('data/real_contradiction.xml')\n",
+    "root = tree.getroot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pairs = []\n",
+    "for child in root:\n",
+    "    pair =[]\n",
+    "    attrib = child.attrib\n",
+    "    if (attrib['contradiction'] =='YES') & \\\n",
+    "    ((attrib['type'] == 'lexical') | (attrib['type'] == 'negation')):\n",
+    "        for statement in child:\n",
+    "            pair.append(statement.text)\n",
+    "    pairs.append(pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove empty rows\n",
+    "pairs = [pair for pair in pairs if len(pair)>0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pairs = pd.DataFrame(pairs, columns = [\"statement\",\"negation\"])"
    ]
   },
   {
